to prwto mou commit pou to PC

--- a/game.html
+++ b/game.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="mainGame"></div>
+    <button onclick="clicked1()" id="country1"></button>
+    <button onclick="clicked2()" id="country2"></button>
     <script src="main.js"></script>
   </body>
 </html>
